# transitfeed

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
benches/: gtfs_benchmark.rs
examples/invalid_csv/: stops.txt
src/: archive.rs  error.rs  feed.rs  gtfs.rs  lib.rs  transit.rs
src/gtfs/: agencies.rs  calendar_dates.rs  calendars.rs  error.rs  frequencies.rs  gtfs.rs  mod.rs  parse.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  test_parsing.rs  trips.rs
tests/: feed.rs  read_gtfs.rs
