[package]
name = "transitfeed"
description = "GTFS public transit decoder/encoder and utilities"
license = "MIT"
repository = "https://github.com/bfrog/transitfeed"
version = "0.2.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
keywords = ["transit", "gtfs", "transitfeed"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.0.0-beta.5"
serde = "1"
serde_derive = "1"
zip = "0.2"

[lib]
bench=false
