[package]
name = "transitfeed"
description = "GTFS public transit decoder/encoder and utilities"
license = "MIT"
repository = "https://github.com/bfrog/transitfeed"
version = "0.3.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
keywords = ["transit", "gtfs", "transitfeed"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
serde = "1"
serde_derive = "1"
tempfile = "3.0.1"
zip = "0.5"

[lib]
bench=false
