[package]
name = "transitfeed"
description = "GTFS public transit decoder/encoder and utilities"
license = "MIT"
repository = "https://github.com/georust/transitfeed"
version = "0.3.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]
keywords = ["transit", "gtfs", "transitfeed"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
zip = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "gtfs"
path = "benches/gtfs_benchmark.rs"
harness = false
